# JumpFlooding

./: .gitignore  CMakeLists.txt  PixelEffect.sln  README.txt  clean.bat
AndroidApp/: build.gradle  local.properties
AndroidApp/app/: build.gradle
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/res/values/: strings.xml
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
PixelEffect/PixelEffect.Android/: AndroidDevice.cpp  DisplayDeviceAndroid.cpp  DisplayDeviceAndroid.h  FileAndroid.cpp  FileAndroid.h  FileManagerAndroid.cpp  FileManagerAndroid.h  PixelEffect.Android.vcxproj  PixelEffect.Android.vcxproj.filters  TouchInputDeviceAndroid.cpp  TouchInputDeviceAndroid.h
PixelEffect/PixelEffect.Framework/: ColorRGB.h  ColorRGBA.h  Factory.h  IFileManager.h  KeyboardInputDevice.h  KeyboardInputDeviceHandler.h  PixelEffect.Framework.vcxitems  PointerInputDevice.h  PointerInputDeviceHandler.h  StringHelper.h  Timer.cpp  Timer.h  WindowInputDevice.h  WindowInputDeviceHandler.h
PixelEffect/PixelEffect.Shared/: Camera.cpp  Camera.h  ContentAlignment.h  DisplayDevice.cpp  DisplayDevice.h  Framebuffer.cpp  Framebuffer.h  GLConfig.h  GlobalHeader.h  GraphicObject.h  GraphicObject2D.h  GridSystem.cpp  GridSystem.h  Line.cpp  Line.h  LineList.cpp  LineList.h  Log.h  PixelEffect.Shared.vcxitems  PixelEffect.Shared.vcxitems.filters  Point.cpp  Point.h  PointList.cpp  PointList.h  Renderer.cpp  Renderer.h  RendererSettings.cpp  RendererSettings.h  Shader.h
PixelEffect/PixelEffect.UI/: Circle2D.cpp  Circle2D.h  Line2D.cpp  Line2D.h  Painter.cpp  Painter.h  Panel.cpp  Panel.h  PixelEffect.UI.vcxitems  Point2D.cpp  Point2D.h  Polygon2D.cpp  Polygon2D.h
PixelEffect/PixelEffect.Windows/: DisplayDeviceWindow.cpp  DisplayDeviceWindow.h  FileManagerWindows.cpp  FileManagerWindows.h  FileWindows.cpp  FileWindows.h  KeyboardInputDeviceWindows.cpp  KeyboardInputDeviceWindows.h  PixelEffect.Windows.vcxproj  PixelEffect.Windows.vcxproj.filters  PointerInputDeviceWindows.cpp  PointerInputDeviceWindows.h  WindowInputDeviceWindows.cpp  WindowInputDeviceWindows.h  dllmain.cpp
WindowsApp/: WindowsApp.vcxproj  main.cpp
WindowsApp/resources/models/Caipira/: Model1.pxm
WindowsApp/resources/models/Carrot/: Model2.pxm
WindowsApp/resources/models/Noel/: Model1.pxm
WindowsApp/resources/models/Wolf/: Model3.pxm  Model5.pxm
WindowsApp/resources/models/Wolf2/: Model4.pxm
WindowsApp/resources/sprites/: sonic.xml
dependencies/freetype/builds/windows/vc2017/: freetype.sln  freetype.vcxproj
dependencies/freetype/objs/vc2010/Win32/: freetype.ilk  freetype281d.lib
dependencies/libpng16/: CMakeLists.txt
dependencies/libpng16/projects/vstudio/: vstudio.sln  zlib.props
dependencies/libpng16/projects/vstudio/libpngAndroid/libpngAndroid.Android/: libpngAndroid.Android.vcxproj
dependencies/libpng16/projects/vstudio/libpngAndroid/libpngAndroid.Shared/: libpngAndroid.Shared.vcxitems
dependencies/libpng16/projects/vstudio/libpngAndroid/libpngAndroid.iOS/: libpngAndroid.iOS.vcxproj
dependencies/libpng16/projects/vstudio/zlib/: zlib.vcxproj
dependencies/libpng16/projects/vstudio/zlibAndroid/zlibAndroid.Android/: zlibAndroid.Android.vcxproj
dependencies/openml/: .gitignore  CMakeLists.txt  OpenML.sln
dependencies/openml/.github/ISSUE_TEMPLATE/: Bug_report.md
dependencies/openml/OpenML.Android/: OpenML.Android.vcxproj
dependencies/openml/OpenML.Shared/: Circle2D.cpp  Colision2DStatus.h  Line2D.cpp  Line2D.h  Line3D.h  Mat.h  Mat2.cpp  Mat3.cpp  Mat3.h  Mat4.cpp  MathPP.cpp  OpenML.Shared.vcxitems  OpenML.h  Orientation.h  Plane3D.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  Quat.cpp  Quat.h  Rectangle2D.cpp  Rectangle2D.h  SystemOfLinearEquations.h  Triangle2D.cpp  Triangle2D.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec4.cpp
dependencies/openml/OpenML.Test/: Asserts.h  Circle2DTest.cpp  Line2DTest.cpp  Line3DTest.cpp  Mat2Test.cpp  Mat3Test.cpp  Mat4Test.cpp  OpenML.Test.vcxproj  OpenML.Test.vcxproj.filters  Plane3DTest.cpp  Point3DTest.cpp  QuatTest.cpp  Rectangle2DTest.cpp  SystemOfLinearEquationsTest.cpp  TestHeader.h  Triangle2DTest.cpp  Vec2Test.cpp  Vec3Test.cpp
dependencies/openml/OpenML.Win32/: OpenML.Win32.vcxproj
dependencies/pugixml/: CMakeLists.txt
dependencies/pugixml/contrib/: XmlPP.sln
dependencies/pugixml/contrib/XmlPP.Android/: XmlPP.Android.vcxproj
dependencies/pugixml/contrib/XmlPP.Shared/: XmlPP.Shared.vcxitems
dependencies/pugixml/contrib/XmlPP.Win32/: XmlPP.Win32.vcxproj  dllmain.cpp
dependencies/pugixml/contrib/XmlPP.iOS/: XmlPP.iOS.cpp  XmlPP.iOS.vcxproj
dependencies/scripts/: build-assimp-windows.bat  build-freetype-android-all.bat  build-freetype-android.bat  build-freetype-windows-all.bat  build-glm-android-all.bat  build-glm-android.bat  build-glm-windows-all.bat  build-mathpp-all.bat  build-mathpp-android.bat  build-mathpp-windows.bat  build-openal-windows.bat  build-png-android-all.bat  build-png-android.bat  build-png-windows-all.bat  build-pugixml-all.bat  build-pugixml-android.bat  build-pugixml-windows.bat  build-zlib-all.bat  build-zlib-android.bat  build-zlib-windows.bat
include/OpenML/: Circle2D.h  GlobalHeader.h  Line2D.h  Line3D.h  Mat.h  Mat2.h  Mat3.h  Mat4.h  MathPP.h  OpenMLConfiguration.h  Plane3D.h  Point2D.h  Point3D.h  Quat.h  Rectangle2D.h  SystemOfLinearEquations.h  Triangle2D.h  Vec2.h  Vec3.h  Vec4.h
lib/x64/Debug/: glm.lib  pugixml.lib
lib/x64/Release/: glm.lib  pugixml.lib
lib/x86/Debug/: OpenAL32.lib  assimp-vc140-mtd.lib  freetype.lib  libpng16.lib  pugixml.lib
lib/x86/Release/: MathPP.lib  OpenAL32.lib  assimp-vc140-mt.lib  freetype.lib  pugixml.lib
lib/x86/old/: MathPP.Win32.lib  XmlPP.Win32.lib  freetype.lib  libpng16.lib  old-XmlPP.Win32.lib-old  zlib.lib
resources/images/: sprite-new.tps
resources/models/SimpleHuman/: Model1.pxm
resources/models/Spider/: Model3.pxm
resources/models/Ted/: Model1.pxm
resources/models/Wolf/: Model1.pxm  Model2.pxm
resources/models/Wolf2/: Model5.pxm
resources/shaders/: default.vert
(+30 files in other folders)
